Added projets section with cards

--- a/overrides/partials/home.html
+++ b/overrides/partials/home.html
@@ -70,7 +70,7 @@
 
         <!-- Hero content -->
         <div class="mdx-hero__content">
-          <h1>Hub usine école 4.0</h1>
+          <h1>Hub Production Automatisée et Usine Connectée (P.A.U.C)</h1>
 
               <p>{{ config.site_description }}.</p>
           <h2>Formations proposées</h2> <!-- Présentation de la formation année / année -->
